--- a/tests/src/CoreLibTestRunner.mxml
+++ b/tests/src/CoreLibTestRunner.mxml
@@ -31,16 +31,44 @@
   NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
   SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
+<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" 
+	xmlns:s="library://ns.adobe.com/flex/spark" 
+	xmlns:mx="library://ns.adobe.com/flex/halo"
+	xmlns:flexUnitUIRunner="http://www.adobe.com/2009/flexUnitUIRunner" 
+	minWidth="955" minHeight="600"
+	creationComplete="onCreationComplete();">
+	
+	<fx:Script>
+		<![CDATA[
+			import org.flexunit.internals.TextListener;
+			import org.flexunit.internals.TraceListener;
+			import org.flexunit.listeners.CIListener;
+			import org.flexunit.listeners.UIListener;
+			import org.flexunit.runner.FlexUnitCore;
+			
+			private var core:FlexUnitCore;
+			
+			private function onCreationComplete():void
+			{
+				core = new FlexUnitCore();
+				
+				// If you don't need graphical test results, comment out the line 
+				// below and the MXML declaring the TestRunnerBase.
+				core.addListener( new UIListener( uiListener ) );
+				
+				// Listener to support continuous integration servers
+				core.addListener( new CIListener() );
+				
+				// If you would like to see text output in verbose mode, 
+				// uncomment either of the follow listeners
+				//core.addListener( new TraceListener() ); // For AS3 Projects
+				//core.addListener( TextListener.getDefaultTextListener( LogEventLevel.DEBUG ) ); // For Flex Projects
+				
+				core.run( AllCoreLibTests );
+			}
+		]]>
+	</fx:Script>
 
-<mx:Application 
-	xmlns:mx="http://www.adobe.com/2006/mxml" xmlns="*"
-	xmlns:flexunit="flexunit.flexui.*"
-	creationComplete="onCreationComplete()">
-
-	<mx:Script source="CoreLibTestRunner.as" />
-
-	<mx:Canvas width="100%" height="100%">
-		<flexunit:TestRunnerBase id="testRunner" width="100%" height="100%" />
-		
-	</mx:Canvas>
-</mx:Application>
+	<flexUnitUIRunner:TestRunnerBase id="uiListener" width="100%" height="100%"  />
+	
+</s:Application>
